--- a/ios/test_galadrim/Info.plist
+++ b/ios/test_galadrim/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,5 +53,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ProximaNova.ttf</string>
+		<string>TwCenMT.ttf</string>
+		<string>Ballet.ttf</string>
+		<string>TwCenMT-Bold.ttf</string>
+	</array>
 </dict>
 </plist>
