--- a/ios/test_galadrim/Info.plist
+++ b/ios/test_galadrim/Info.plist
@@ -59,6 +59,7 @@
 		<string>TwCenMT.ttf</string>
 		<string>Ballet.ttf</string>
 		<string>TwCenMT-Bold.ttf</string>
+		<string>ProximaNova-Light.otf</string>
 	</array>
 </dict>
 </plist>
